# tache-rs

./: .gitignore  Cargo.toml
tache/: Cargo.toml  build.rs
tache/examples/: config.yaml
tache/src/: config.rs  context.rs  dns_resolver.rs  lib.rs  local.rs  main.rs  utils.rs
tache/src/engine/: dns_resolver.rs  mod.rs
tache/src/engine/rules/: direct.rs  global.rs  mod.rs
tache/src/inbound/: http_s.rs  mod.rs
tache/src/inbounds/: http.rs  mod.rs
tache/src/outbound/: direct.rs  mod.rs
tache/src/protocol/: mod.rs
tache/src/protocol/http/: http.rs  mod.rs  server.rs  service.rs
tache/src/protocol/socks/: mod.rs  socks5.rs  v5.rs
tache/src/proxy/: mod.rs
tache/src/proxy/socks/: v5.rs
tache/src/rules/: direct.rs  global.rs  mod.rs
tuntap/: Cargo.toml
tuntap/src/: configuration.rs  tuntap.rs
