[package]
name = "tache"
version = "0.1.0"
authors = ["zhsyourai <mysoftzhs@gmail.com>"]
edition = "2018"

[lib]
name = "tache"

[[bin]]
name = "tachelocal"
path = "src/bin/local.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.6"
time = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
url = "2.0"
signal = "0.6"
libc = "0.2"
rand = "0.6"
fnv = "1"
net2 = "0.2"
yaml-rust = "0.4"
igd = "^0.8.2"
siphasher = "0.3"
daemonize = "0.3"
ring = "^0.16"
base-62 = "0.1"
http = "0.1"
http-body = "0.2.0-alpha.1"
tokio = { version = "0.2.0-alpha.4", features = ["default", "signal"] }
bytes = "0.4"
num_cpus = "1.8.0"
futures-preview = "0.3.0-alpha.18"
futures-util-preview = "0.3.0-alpha.18"
httparse = "1.0"
lru-cache = "0.1"
dns-parser = "0.8"
trust-dns-resolver = { version = "^0.12", features = ["dns-over-rustls", "dns-over-https-rustls"] }
json5 = "0.2"
base64 = "0.10"

[build-dependencies]
rustc_tools_util = "0.2.0"