[package]
name = "tache"
version = "0.1.0"
authors = ["zhsyourai <mysoftzhs@gmail.com>"]
edition = "2018"

[lib]
name = "tache"

[[bin]]
name = "tachelocal"
path = "src/bin/local.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-net = {version = "0.2.6", features = ["rust-tls"]}
actix-web = "1.0.7"
actix-service = "0.4.2"
actix-http = "0.2.10"
actix-server = "0.6.0"
actix-server-config = "0.1.2"
net2 = "0.2"
bitflags = "1.1.0"
byteorder = "1.3.2"
clap = "2.33.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.6"
time = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
url = "2.0"
libc = "0.2"
rand = "0.6"
fnv = "1"
yaml-rust = "0.4"
igd = "^0.8.2"
siphasher = "0.3"
daemonize = "0.3"
base-62 = "0.1"
http = "0.1"
tokio = "0.1"
bytes = "0.4"
num_cpus = "1.8.0"
futures = "0.1"
httparse = "1.0"
lru-cache = "0.1"
trust-dns-resolver = { version = "^0.10", features = ["dns-over-https-rustls"] }
json5 = "0.2"
base64 = "0.10"

[build-dependencies]
rustc_tools_util = "0.2.0"