[package]
name = "tache"
version = "0.1.0"
authors = ["zhsyourai <mysoftzhs@gmail.com>"]
edition = "2018"

[lib]
name = "tache"

[[bin]]
name = "tachelocal"
path = "src/bin/local.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
clap = "2.33.0"
log = { version = "0.4.8", features = ["std"] }
env_logger = "0.7.1"
time = "0.1.42"
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
url = "2.1.0"
signal = "0.7.0"
libc = "0.2.65"
rand = "0.7.2"
fnv = "1.0.6"
net2 = "0.2.33"
yaml-rust = "0.4.3"
igd = "0.9.1"
siphasher = "0.3.1"
daemonize = "0.4.1"
ring = "0.16.9"
base-62 = "0.1.1"
http = "0.1.19"
bytes = "0.4.12"
num_cpus = "1.11.1"
async-trait = "0.1.17"
futures = "0.3.1"
futures-util = "0.3.1"
httparse = "1.3.4"
lru-cache = "0.1.2"
dns-parser = "0.8.0"
trust-dns-resolver = { version = "0.12.0", features = ["dns-over-rustls", "dns-over-https-rustls"] }
json5 = "0.2.5"
base64 = "0.11.0"
async-std = "1.0.1"

[build-dependencies]
rustc_tools_util = "0.2.0"
